test/asm/def-scoped.err
error: syntax error, unexpected local label, expecting symbol
    at def-scoped.asm(10)
error: syntax error, unexpected local label, expecting symbol
    at def-scoped.asm(13)
error: syntax error, unexpected local label, expecting symbol
    at def-scoped.asm(16)
Assembly aborted with 3 errors!
